[tool.poetry]
name = "project10-1"
version = "0.1.0"
description = ""
authors = ["Alex Potemkin <koldunpot98@gmail.com>"]
readme = "README.md"
packages = [{include = "project10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
